feat(api): project release
